When an isolated run is appended, m_eor(End Of Run) is wrongly incremented. Instead of moving to the next renderer, the iterator(m_eor) is just moving to the next position in the same renderer.

BUG=330974

Review URL: https://codereview.chromium.org/122553005

git-svn-id: svn://svn.chromium.org/blink/trunk@164396 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 7db2b0da87317f387d4e5b11f8bfa02f5bb6c260